Fix link in ToC

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -16,7 +16,7 @@ developers and projects that advance the Bitcoin ecosystem.
 In this latest round, we are proud to support eight remarkable projects that
 exemplify the spirit of our mission. In no particular order, these projects are:
 
-- [secp256k1.swift](#secp256k1.swift)
+- [secp256k1.swift](#secp256k1swift)
 - [Blitz Wallet](#blitz-wallet)
 - [NLightning](#nlightning)
 - [Bitcoin Fees](#bitcoin-fees)
