--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -9,12 +9,12 @@ summary: "OpenSats is funding 8 more open-source projects in the bitcoin ecosyst
 ---
 
 We are excited to announce the sixth wave of Bitcoin grants, reaffirming our
-commitment to fostering innovation and development within the open-source
-community.  An important part of our mission is to provide essential funding to
-developers and projects that advance the Bitcoin ecosystem.
+commitment to supporting freedom tech and projects that help Bitcoin flourish.
+An important part of our mission is to provide essential funding to developers
+and projects that advance the open-source ecosystem that Bitcoin relies upon.
 
-In this latest round, we are proud to support eight remarkable projects that
-exemplify the spirit of our mission. In no particular order, these projects are:
+In this latest round, we are proud to support eight projects that align with our
+mission. In no particular order, these projects are:
 
 - [secp256k1.swift](#secp256k1swift)
 - [Blitz Wallet](#blitz-wallet)
@@ -26,8 +26,8 @@ exemplify the spirit of our mission. In no particular order, these projects are:
 - [Bitcoin Jungle](#bitcoin-jungle)
 
 Made possible by the generosity of our donors, these grants enable the various
-contributors to continue their critical work into the future. If you would like
-to support [our mission](/mission), then please consider donating:
+contributors to continue and expand their work. If you would like to support
+[our mission](/mission), then please consider donating:
 
 <center>
     <DonateToGeneralFundButton/>
