--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -33,8 +33,8 @@ contributors to continue and expand their work. If you would like to support
     <DonateToGeneralFundButton/>
 </center>
 
-To learn more about the types of projects and contributors we support, view our
-[long-term support grants](/tags/lts) as well as [our 2023 year in
+To learn more about the types of projects and contributors we support, have a
+look at our [long-term support grants](/tags/lts) as well as [our 2023 year in
 review](/blog/2023-year-in-review).
 
 Let's dive in and take a closer look at these projects to understand what they
