Link to general fund

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -27,7 +27,8 @@ mission. In no particular order, these projects are:
 
 Made possible by the generosity of our donors, these grants enable the various
 contributors to continue and expand their work. If you would like to support
-[our mission](/mission), then please consider donating:
+[our mission](/mission), then please consider donating to our [General
+Fund](/funds/general):
 
 <center>
     <DonateToGeneralFundButton/>
