--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -26,8 +26,8 @@ mission. In no particular order, these projects are:
 - [Bitcoin Jungle](#bitcoin-jungle)
 
 Made possible by the generosity of our donors, these grants enable the various
-contributors to continue and expand their work. If you would like to support
-[our mission](/mission), then please consider donating to our [General
+contributors to continue and expand their important work. If you would like to
+support [our mission](/mission), then please consider donating to our [General
 Fund](/funds/general):
 
 <center>
