--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -75,7 +75,7 @@ The grant will support integrating a Liquid wallet, improving user experience
 with the built-in store and contact features, and launching iOS and Android apps
 (both currently in Beta). The project aims to create an all-encompassing
 Lightning wallet experience, addressing inbound liquidity issues and providing
-users with practical ways to spend Bitcoin and simplify transactions.
+users with practical ways to spend bitcoin and simplify transactions.
 
 Repository: [BlakeKaufman/BlitzWallet](https://github.com/BlakeKaufman/BlitzWallet)  
 License: Apache v2.0
