--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -145,11 +145,12 @@ License: MIT
 
 ### Peer Storage Backups for Lightning Channels
 
-Peer Storage Backups for Lightning Channels focuses on creating an automated
-backup solution for the Lightning Network, enabling fund recovery in case of
-data loss. The project aims to enhance the reliability of the Lightning Network
-by developing a seamless recovery process for users to retrieve funds from
-corrupted databases using only their initial passphrase.
+[Peer Storage Backups](https://github.com/lightning/bolts/pull/1110) for
+Lightning Channels focuses on creating an automated backup solution for the
+Lightning Network, enabling fund recovery in case of data loss. The project aims
+to enhance the reliability of the Lightning Network by developing a seamless
+recovery process for users to retrieve funds from corrupted databases using only
+their initial passphrase.
 
 The grant will support automating peer storage backup detection, creating
 mechanisms for nodes to advertise backup support, and preparing a Lightning-spec
@@ -158,8 +159,8 @@ universally compatible across different implementations. The project will also
 research methods to resume channel operations post-recovery and explore
 additional use cases for peer storage.
 
-Repository: [ElementsProject/lightning](https://github.com/ElementsProject/lightning)  
-License: MIT
+Repositories: [bolts](https://github.com/lightning/bolts) / [rust-lightning](https://github.com/lightningdevkit/rust-lightning) / [lightning](https://github.com/ElementsProject/lightning) / [lnd](https://github.com/lightningnetwork/lnd)  
+Licenses: Various (CC-BY 4.0 / MIT / Apache / BSD-MIT )
 
 ### Bitcoin Fees
 
