--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -145,10 +145,10 @@ License: MIT
 
 ### Peer Storage Backups for Lightning Channels
 
-[Peer Storage Backups](https://github.com/lightning/bolts/pull/1110) for
-Lightning Channels focuses on creating an automated backup solution for the
-Lightning Network, enabling fund recovery in case of data loss. The project aims
-to enhance the reliability of the Lightning Network by developing a seamless
+Lightning's [`peer_storage`](https://github.com/lightning/bolts/pull/1110)
+specification allows for automated backups via your peers on the Lightning
+Network, enabling fund recovery in case of data loss. The project aims to
+enhance the reliability of the Lightning Network by developing a seamless
 recovery process for users to retrieve funds from corrupted databases using only
 their initial passphrase.
 
