--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -181,7 +181,7 @@ License: MIT
 Bitcoin Jungle is an open-source community project in Costa Rica focused on
 creating a circular Bitcoin economy. The project provides Bitcoin education,
 resources, and technology to individuals and businesses, aiming to simplify the
-transition to a Bitcoin-based economy and protect businesses' balance sheets
+transition to a bitcoin-based economy and protect businesses' balance sheets
 from inflation.
 
 This grant will enhance their Bitcoin point-of-sale system and wallet
