--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -189,7 +189,7 @@ infrastructure, conduct educational workshops, create educational materials,
 hire local Costa Ricans for tech support and community outreach, and support
 local initiatives that benefit the community.
 
-Website: [bitcoinjungle.app](https://www.bitcoinjungle.app/)  
+Repository: [github.com/Bitcoin-Jungle](https://github.com/Bitcoin-Jungle)
 License: GNU GPLv3
 
 ---
