--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -190,7 +190,7 @@ hire local Costa Ricans for tech support and community outreach, and support
 local initiatives that benefit the community.
 
 Repository: [github.com/Bitcoin-Jungle](https://github.com/Bitcoin-Jungle)
-License: GNU GPLv3
+License: MIT
 
 ---
 
