Remove Bitcoin Jungle
8 -> 7

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
 authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/TODO.jpg']
-summary: "OpenSats is funding 8 more open-source projects in the bitcoin ecosystem."
+summary: "OpenSats is funding 7 more open-source projects in the bitcoin ecosystem."
 ---
 
 We are excited to announce the sixth wave of Bitcoin grants, reaffirming our
@@ -13,7 +13,7 @@ commitment to supporting freedom tech and projects that help Bitcoin flourish.
 An important part of our mission is to provide essential funding to developers
 and projects that advance the open-source ecosystem that Bitcoin relies upon.
 
-In this latest round, we are proud to support eight projects that align with our
+In this latest round, we are proud to support seven projects that align with our
 mission. In no particular order, these projects are:
 
 - [Peer Storage Backups for Lightning Channels](#peer-storage-backups-for-lightning-channels)
@@ -23,7 +23,6 @@ mission. In no particular order, these projects are:
 - [eNuts](#enuts)
 - [Gonuts](#gonuts)
 - [Bitcoin Fees](#bitcoin-fees)
-- [Bitcoin Jungle](#bitcoin-jungle)
 
 Made possible by the generosity of our donors, these grants enable the various
 contributors to continue and expand their important work. If you would like to
@@ -174,22 +173,6 @@ focusing on tracking fees and educating users on managing Bitcoin transaction
 costs.
 
 Repository: [tallyforge/bitcoinfees](https://github.com/tallyforge/bitcoinfees)  
-License: MIT
-
-### Bitcoin Jungle
-
-Bitcoin Jungle is an open-source community project in Costa Rica focused on
-creating a circular Bitcoin economy. The project provides Bitcoin education,
-resources, and technology to individuals and businesses, aiming to simplify the
-transition to a bitcoin-based economy and protect businesses' balance sheets
-from inflation.
-
-This grant will enhance their Bitcoin point-of-sale system and wallet
-infrastructure, conduct educational workshops, create educational materials,
-hire local Costa Ricans for tech support and community outreach, and support
-local initiatives that benefit the community.
-
-Repository: [github.com/Bitcoin-Jungle](https://github.com/Bitcoin-Jungle)
 License: MIT
 
 ---
