--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -45,7 +45,7 @@ are and how these grants will help.
 ### Peer Storage Backups for Lightning Channels
 
 Lightning's [`peer_storage`](https://github.com/lightning/bolts/pull/1110)
-specification allows for automated backups via your peers on the Lightning
+specification allows for automated backups via a node's peers on the Lightning
 Network, enabling fund recovery in case of data loss. The project aims to
 enhance the reliability of the Lightning Network by developing a seamless
 recovery process for users to retrieve funds from corrupted databases using only
