--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -63,13 +63,13 @@ Licenses: Various (CC-BY 4.0 / MIT / Apache / BSD-MIT)
 
 ### secp256k1.swift
 
-Secp256k1.swift provides public key cryptography solutions for Bitcoin
-applications in Swift. It simplifies cryptographic operations by offering tools
-for generating private keys and APIs for features like ECDSA and Schnorr
+Secp256k1.swift is a public key cryptography library written in Swift. It
+simplifies the development of Bitcoin applications by offering common
+cryptographic operations as well as APIs for features like ECDSA and Schnorr
 signatures. By utilizing C bindings from
 [libsecp256k1](https://github.com/bitcoin-core/secp256k1), it enhances the
 efficiency of Bitcoin app development, fostering innovation and supporting the
-creation of non-custodial, decentralized applications.
+creation of non-custodial, decentralized apps.
 
 The grant will support launching a project website, developing Swift APIs for
 MuSig2 and native UInt256 type, adding an XCFramework artifact for cross
