Remove "blockchain technology"
Oh my LORD, almost missed that 😂😅

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -103,9 +103,9 @@ License: Apache v2.0
 [NLightning](https://nlightning.ipms.io/) is an implementation of the Lightning
 Network protocol developed in C#, aimed at enhancing Bitcoin scalability and
 adoption in enterprise systems. The project provides a robust, secure, and
-easy-to-integrate solution for bringing Bitcoin blockchain technology into
-traditional financial environments. It follows a modular design, making it easy
-to extend and customize.
+easy-to-integrate solution for bringing Lightning into traditional financial
+environments. It follows a modular design, making it easy to extend and
+customize.
 
 The grant will support completing the implementation of [BOLT
 specifications](https://nlightning.ipms.io/docs/features.html), launching
