Ecash/ecash -> eCash
Consistency is key!

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -121,9 +121,9 @@ License: MIT
 [eNuts](https://www.enuts.cash/) is a free and open-source mobile
 [Cashu](https://docs.cashu.space/) wallet available for Android and iOS,
 designed with Lightning support and the ability to connect to multiple mints. It
-integrates [nostr](https://nostr.com/) for seamless Ecash transactions between
+integrates [nostr](https://nostr.com/) for seamless eCash transactions between
 users and their contacts. The wallet aims to enhance user experience by making
-Ecash payments easier and safer, providing features like detailed transaction
+eCash payments easier and safer, providing features like detailed transaction
 history, various mint settings, quick share options, and enhanced privacy
 settings​.
 
@@ -140,7 +140,7 @@ License: GNU GPLv3
 Gonuts is a Cashu wallet and mint written in [Go](https://go.dev/), serving as a
 library for developers to integrate Cashu functionality into their Go
 applications. This project aims to simplify the implementation of
-privacy-preserving ecash transactions within the Bitcoin and Lightning Network
+privacy-preserving eCash transactions within the Bitcoin and Lightning Network
 ecosystems, making it easier for developers to incorporate these features into
 their own applications.
 
