Pay-to-Public-Key

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -145,7 +145,7 @@ ecosystems, making it easier for developers to incorporate these features into
 their own applications.
 
 The grant will support several key developments for Gonuts by implementing new
-protocol additions such as Spending Conditions and Pay to Public Key (as
+protocol additions such as Spending Conditions and Pay-to-Public-Key (as
 outlined in NUTs [10](https://github.com/cashubtc/nuts/blob/main/10.md) and
 [11](https://github.com/cashubtc/nuts/blob/main/11.md)), enabling "Multinut"
 payments to allow users to pay a Lightning invoice from multiple mints, and
