Add CTA to donate at the very end

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -179,9 +179,12 @@ License: MIT
 
 With this 6th wave of grants, much like our prior waves, we evaluated
 applications based on carefully defined [criteria](/apply#criteria) and did our
-best to select only the most impactful and promising proposals for the Bitcoin
+best to select the most impactful and promising proposals for the Bitcoin
 ecosystem. If you are a developer working on a project that is aligned with [our
 mission](/mission), don't hesitate to [apply for funding](/apply).
+
+Please [consider donating](/donate) if you want to support open-source projects
+and developers in the Bitcoin ecosystem:
 
 <center>
     <DonateToGeneralFundButton/>
