Add button to General Fund

--- a/data/funds/general.mdx
+++ b/data/funds/general.mdx
@@ -18,6 +18,10 @@ The OpenSats General Fund is a pool of money that is used to support
 Bitcoin-related free and open source projects and contributors. The fund is made
 up of donations from individuals and organizations.
 
+<center>
+    <DonateToGeneralFundButton/>
+</center>
+
 Projects that are eligible for funding from the General Fund must meet the
 following criteria:
 
