Add button to nostr fund

--- a/data/funds/nostr.mdx
+++ b/data/funds/nostr.mdx
@@ -17,6 +17,10 @@ The Nostr Fund is a way for you to support the development and
 improvement of the Nostr protocol and related software. The fund is made up of
 donations from individuals and organizations.
 
+<center>
+    <DonateToNostrFundButton/>
+</center>
+
 The fund is used to support projects that make Nostr more accessible, secure,
 decentralized, and easy to use. It also helps to support projects that educate
 people about Nostr and its potential.
