Add donate button to operations budget

--- a/data/funds/ops.mdx
+++ b/data/funds/ops.mdx
@@ -29,3 +29,7 @@ Bitcoin space.
 You can donate to our operational budget by clicking the "Donate" button on this
 page or head over to the [About Us](/about) page to learn more about the
 organization and our efforts.
+
+<center>
+    <DonateToOperationsButton/>
+</center>
