Add nostr link to /funds pages

--- a/data/funds/nostr.mdx
+++ b/data/funds/nostr.mdx
@@ -7,6 +7,7 @@ website: 'https://opensats.org'
 coverImage: '/static/images/projects/nostr.png'
 git: 'https://github.com/OpenSats'
 twitter: 'opensats'
+nostr: 'npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f'
 zaprite: 'OoYtzNjilW1NRtDsxLAj'
 btcpay: 'nostr'
 tags: ['OpenSats', 'Fund']
