--- a/data/funds/ops.mdx
+++ b/data/funds/ops.mdx
@@ -5,6 +5,7 @@ summary: 'Contributions to the OpenSats Operations Budget will be used to cover 
 coverImage: '/static/images/projects/opensats_operations.png'
 nym: 'OpenSats'
 twitter: 'opensats'
+nostr: 'npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f'
 website: 'https://opensats.org/'
 git: 'https://github.com/OpenSats'
 zaprite: 'lZo1wcsJ0SQb58XfGC4e'
