--- a/data/funds/general.mdx
+++ b/data/funds/general.mdx
@@ -7,6 +7,7 @@ website: 'https://opensats.org'
 coverImage: '/static/images/projects/opensats_logo.png'
 git: 'https://github.com/OpenSats'
 twitter: 'opensats'
+nostr: 'npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f'
 hidden: false
 bonusUSD: 20670000
 zaprite: '32WbND8heqmY5wYYnIpa'
