--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -3,7 +3,7 @@ title: "Long-Term Support For fiatjaf"
 date: '2024-07-23'
 tags: ['OpenSats', 'grants', 'nostr', 'LTS']
 draft: false
-authors: ['arvin']
+authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/41-fiatjaf.jpg']
 summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 ---
