--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -12,9 +12,11 @@ OpenSats is proud to announce long-term support for fiatjaf, the original brain
 behind nostr.
 
 Before nostr, fiatjaf's primary focus was on decentralized financial systems and
-tools for Bitcoin's Lightning Network,
-having contributed to projects like [lntxbot](https://github.com/fiatjaf/lntxbot), [c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf),
-[lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating [LNURL tools](https://github.com/fiatjaf/go-lnurl), to name a few.
+tools for Bitcoin's Lightning Network, having contributed to projects like
+[lntxbot](https://github.com/fiatjaf/lntxbot),
+[c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf),
+[lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating
+[LNURL tools](https://github.com/fiatjaf/go-lnurl), to name a few.
 
 When he is not writing inflammatory posts about how everybody is wrong, he
 spends his time tirelessly enhancing the [nostr](https://nostr.com/) ecosystem
