Link to GitHub and njump

--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -8,8 +8,8 @@ images: ['/static/images/blog/41-fiatjaf.jpg']
 summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 ---
 
-OpenSats is proud to announce long-term support for fiatjaf, the original brain
-behind nostr.
+OpenSats is proud to announce long-term support for
+[fiatjaf](https://github.com/fiatjaf), the original brain behind nostr.
 
 Before nostr, fiatjaf's primary focus was on decentralized financial systems and
 tools for Bitcoin's Lightning Network, having contributed to projects like
@@ -18,9 +18,9 @@ tools for Bitcoin's Lightning Network, having contributed to projects like
 [lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating
 [LNURL tools](https://github.com/fiatjaf/go-lnurl), to name a few.
 
-When he is not writing inflammatory posts about how everybody is wrong, he
-spends his time tirelessly enhancing the [nostr](https://nostr.com/) ecosystem
-he pioneered.
+When he is not writing [inflammatory posts about how everybody is
+wrong](https://njump.me/fiatjaf.com), he spends his time tirelessly enhancing
+the [nostr](https://nostr.com/) ecosystem he pioneered.
 
 This LTS grant will enable fiatjaf to focus all his time and attention on nostr
 and his many ongoing projects, such as
