--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -11,8 +11,8 @@ summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 OpenSats is proud to announce long-term support for
 [fiatjaf](https://github.com/fiatjaf), the original brain behind nostr.
 
-Before nostr, fiatjaf's primary focus was on decentralized financial systems and
-tools for Bitcoin's Lightning Network, having contributed to projects like
+Before nostr, fiatjaf's primary focus was on building tools for Bitcoin's
+Lightning Network, having contributed to projects like
 [lntxbot](https://github.com/fiatjaf/lntxbot),
 [c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf),
 [lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating
@@ -20,7 +20,7 @@ tools for Bitcoin's Lightning Network, having contributed to projects like
 
 When he is not writing [inflammatory posts about how everybody is
 wrong](https://njump.me/fiatjaf.com), he spends his time tirelessly enhancing
-the [nostr](https://nostr.com/) ecosystem he pioneered.
+the nostr ecosystem he pioneered.
 
 This LTS grant will enable fiatjaf to focus all his time and attention on nostr
 and his many ongoing projects, such as
