Add link to NIP-29

--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -44,7 +44,7 @@ experience, bolstering network resilience, and offering competitive alternatives
 to existing solutions.
 These projects include:
 
-- NIP-29 GTK4 desktop client
+- A [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md) GTK4 desktop client
 - Custom relays using khatru and mmm
 - A competing solution to [Ditto](https://ditto.pub/)
 
