Small stylistic change to the bullet point list

--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -44,9 +44,9 @@ experience, bolstering network resilience, and offering competitive alternatives
 to existing solutions.
 These projects include:
 
-- A [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md) GTK4 desktop client
-- Custom relays using khatru and mmm
-- A competing solution to [Ditto](https://ditto.pub/)
+- A [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md) GTK4 desktop client,
+- A competing solution to [Ditto](https://ditto.pub/), and
+- Custom relays using `khatru` and `mmm`.
 
 > Nostr is the simplest open protocol that is able to create a
 > censorship-resistant global "social" network once and for all.
