--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -58,15 +58,14 @@ the freedom tech of tomorrow. We believe that free and open-source software
 tools in general, and
 Bitcoin and nostr in particular, are essential to the future of the internet and the world.
 
-LTS grants are awarded to individuals or projects making significant
-contributions to the open-source ecosystem within Bitcoin and nostr, and we are
-excited to extend our support to such a remarkable and prolific developer.
+Long-term support is awarded to individuals making significant contributions to
+the open-source ecosystem within Bitcoin and nostr, and we are excited to extend
+our support to such a remarkable and prolific developer.
 
-The [Long-Term Support
-program](/blog/nostr-lts-long-term-support-for-nostr-developers) is made
-possible by generous donors like you. To help us continue supporting important
-open-source contributors like fiatjaf, consider making a donation to [The Nostr
-Fund](/funds/nostr).
+Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
+made possible by generous donors like you. To help us continue supporting
+important open-source contributors like fiatjaf, consider making a donation to
+[The Nostr Fund](/funds/nostr).
 
 <center>
     <DonateToNostrFundButton/>
