--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -65,7 +65,7 @@ our support to such a remarkable and prolific developer.
 Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
 made possible by generous donors like you. To help us continue supporting
 important open-source contributors like fiatjaf, consider making a donation to
-[The Nostr Fund](/funds/nostr).
+[The Nostr Fund](/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
