Fix gonuts repo name

--- a/data/blog/bitcoin-grants-july-2024-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-july-2024-6th-wave.mdx
@@ -158,7 +158,7 @@ deployment and extend support to other Lightning backends beyond LND. These
 enhancements will make Gonuts more robust, versatile, and user-friendly,
 fostering broader adoption and innovation within the Cashu ecosystem.
 
-Repository: [elnosh/gonu](https://github.com/elnosh/gonuts)  
+Repository: [elnosh/gonuts](https://github.com/elnosh/gonuts)  
 License: MIT
 
 ### Bitcoin Fees
