Criteria: Good for Bitcoin
Better wording of 1st bullet point of criteria.

--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -22,7 +22,7 @@ apply for a grant below.
 
 All applications should be made with the following criteria in mind:
 
-- Bitcoin
+- Good for Bitcoin
 - Free and Open-Source
 - Transparency & Education
 
