Added 'wave' tag for "Sixth Wave of Bitcoin Grants"

--- a/data/blog/bitcoin-grants-july-2024-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-july-2024-6th-wave.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Sixth Wave of Bitcoin Grants"
 date: '2024-07-22'
-tags: ['OpenSats', 'grants', 'bitcoin']
+tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 draft: false
 authors: ['arvin', 'btcschellingpt']
 images: ['/static/images/blog/41-bitcoin-6th-wave.jpg']
